--- a/2020/materials/day1-intro-ethics/02-intro-computational-social-science.tex
+++ b/2020/materials/day1-intro-ethics/02-intro-computational-social-science.tex
@@ -10,14 +10,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[]{Introduction to computational social science}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
-\date[]{Summer Institutes in Computational Social Science\\2020
+\date[]{Summer Institutes in Computational Social Science\\Day 1\\2020
 \vfill
 \begin{flushleft}
 {\scriptsize
-The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation and the Alfred P. Sloan Foundation.}
+The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation, Alfred P. Sloan Foundation, Facebook, and the Social Science Research Council.}
 \end{flushleft}
 \begin{flushright}
-\vspace{0.3in}
 \includegraphics[width=0.1\textwidth]{figures/cc-by.png}
 \end{flushright}
 }
@@ -91,7 +90,7 @@ The Summer Institutes in Computational Social Science is supported by grants fro
 \only<2-3>{\includegraphics[width=\textwidth]{figures/blumenstock_predicting_2015_fig3ab}}
 \end{center}
 \vspace{-0.2in}
-\hspace{0.2in}Readymade + Custommade \hspace{0.9in} \onslide<2-3>Custommade\\ 
+\hspace{0.2in}Blumenstock et al.\ \hspace{0.9in} \onslide<2-3>Demographic and Health Survey\\ 
 
 \pause \pause 
 \vfill
@@ -190,7 +189,7 @@ No
 \end{center}
 
 \vf
-\Tiny{\url{http://www.washingtonpost.com/wp-dyn/content/graphic/2011/02/11/GR2011021100614.html}, based on Hilbert and L\`{o}pez (2011)}
+\Tiny{\textit{Bit by Bit}, Fig 1.1, based on Hilbert and L\`{o}pez (2011)}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -265,8 +264,16 @@ No
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
+\begin{center}
+\LARGE{Social Scientists $\longleftrightarrow$ Data Scientists}
+\end{center}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
 \begin{itemize}
-\item Data science alone is not enough if we want to study social behavior (e.g., Anderson)
+\item Data science alone is not enough if we want to study social behavior
 \pause
 \item Social science alone is not enough if we want to use new data sources
 \end{itemize}
