ethics clean-up

--- a/2020/materials/day1-intro-ethics/ethics_additions_extensions.tex
+++ b/2020/materials/day1-intro-ethics/ethics_additions_extensions.tex
@@ -304,12 +304,12 @@ Addition and extension 3 of 5: Fifth area of difficulty
 
 Areas of difficulty:
 \begin{enumerate}
-\item informed consent
-\item informational risk
-\item privacy
-\item making decisions in the face of uncertainty
+\item Informed consent
+\item Informational risk
+\item Privacy
+\item Making decisions in the face of uncertainty
 \pause 
-\item unanticipated secondary uses
+\item Unanticipated secondary uses
 \end{enumerate}
 
 \end{frame}
