--- a/2020/materials/day1-intro-ethics/ethics_part1.tex
+++ b/2020/materials/day1-intro-ethics/ethics_part1.tex
@@ -6,10 +6,17 @@
 \usepackage{comment}
 
 \usepackage{xcolor}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[]{Ethics\\\textcolor{blue}{Part 1}, Part 2, Additions and extensions}
+\title[]{Ethics\\Part 1, \textcolor{gray}{Part 2}, \textcolor{gray}{Additions and extensions}}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
 \date[]{Summer Institutes in Computational Social Science\\Day 1\\2020
 \vfill
@@ -41,29 +48,6 @@ The Summer Institutes in Computational Social Science is supported by grants fro
 4) Running experiments \\
 5) Mass collaboration \\
 \textcolor{blue}{6) Ethics} \\
-7) The future \\
-\end{column}%
-\end{columns}
-
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{columns}
-\begin{column}{.40\textwidth}
-\includegraphics[width=\textwidth]{figures/salganik_bit_2018_cover}
-\end{column}%
-
-\hfill%
-
-\begin{column}{.60\textwidth}
-1) Introduction \\
-2) Observing behavior \\
-3) Asking questions \\
-4) Running experiments \\
-5) Mass collaboration \\
-6) Ethics \\
 \textcolor{blue}{Part 1}, Part 2, Additions and extensions \\
 7) The future \\
 \end{column}%
@@ -111,7 +95,7 @@ Two existing approaches:
 \pause
 \item Ad hoc approach
 \end{itemize}
-
+\pause
 My preferred approach:
 \begin{itemize}
 \item Principles-based approach
@@ -139,7 +123,7 @@ Examples:
 \begin{frame}
 
 \begin{figure}
-\includegraphics{figures/kramer_experimental_2014_title}
+\includegraphics[width=\textwidth]{figures/kramer_experimental_2014_title}
 \end{figure}
 
 \vfill
@@ -159,7 +143,7 @@ Examples:
 \begin{frame}
 
 \begin{figure}
-\includegraphics{figures/lewis_tastes_2008_title}
+\includegraphics[width=\textwidth]{figures/lewis_tastes_2008_title}
 \end{figure}
 
 \vfill
@@ -181,7 +165,7 @@ Examples:
 \begin{frame}
 
 \begin{figure}
-\includegraphics{figures/burnett_encore_2015_title}
+\includegraphics[width=\textwidth]{figures/burnett_encore_2015_title}
 \end{figure}
 
 \vfill
@@ -196,6 +180,7 @@ What's the problem?
 \item Increasing power
 \pause
 \item Inconsistent and overlapping rules, norms, and expectations
+\pause
 \begin{itemize}
 \item Rules are slow to change
 \pause
@@ -310,8 +295,16 @@ How do you balance these four principles?
 \begin{frame}
 
 \begin{itemize}
-\item Consequentialism
-\item Deontology
+\item Consequentialism (focus on ends)
+\item Deontology (focus on means)
+\end{itemize}
+\pause
+\vfill
+A few things to keep in mind:
+\begin{itemize}
+\item Both of these approaches can be taken to extremes
+\pause
+\item Most disagreements are between people taking different approaches 
 \end{itemize}
 
 \end{frame}
