--- a/2020/materials/day1-intro-ethics/ethics_part1.tex
+++ b/2020/materials/day1-intro-ethics/ethics_part1.tex
@@ -18,12 +18,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[]{Ethics\\Part 1, \textcolor{gray}{Part 2}, \textcolor{gray}{Additions and extensions}}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
-\date[]{Summer Institutes in Computational Social Science\\Day 1\\2020
-\vfill
-\begin{flushleft}
-{\scriptsize
-The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation, Alfred P. Sloan Foundation, Facebook, and the Social Science Research Council.}
-\end{flushleft}
+\date[]{%Summer Institutes in Computational Social Science\\Day 1\\2020
+%\vfill
+%\begin{flushleft}
+%{\scriptsize
+%The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation, Alfred P. Sloan Foundation, Facebook, and the Social Science Research Council.}
+%\end{flushleft}
 \begin{flushright}
 \includegraphics[width=0.1\textwidth]{figures/cc-by.png}
 \end{flushright}
