syncing wording to bit by bit

--- a/2020/materials/day1-intro-ethics/ethics_additions_extensions.tex
+++ b/2020/materials/day1-intro-ethics/ethics_additions_extensions.tex
@@ -64,7 +64,7 @@ Ethics, part 1 and part 2
 \item Digital is different
 \item Four principles
 \item Two ethics frameworks
-\item Four areas of difficulty
+\item Areas of difficulty
 \item Practical tips
 \end{itemize}
 
@@ -425,7 +425,7 @@ Ethics, part 1 and part 2
 \item Digital is different
 \item Four principles
 \item Two ethics frameworks
-\item Four areas of difficulty
+\item Areas of difficulty
 \item Practical tips
 \end{itemize}
 
