post shoot clean-up

--- a/2020/materials/day1-intro-ethics/ethics_part2.tex
+++ b/2020/materials/day1-intro-ethics/ethics_part2.tex
@@ -136,7 +136,7 @@ US Court of Appeals, 7th Circuit).
 \begin{itemize}
 \item \onslide<1>{Simple idea: informed consent for all research}
 \item \onslide<2>{\sout{Simple idea: informed consent for all research}}
-\item \onslide<2>{Actual rules and principles: some for of consent for most research}
+\item \onslide<2>{Actual rules and principles: some form of consent for most research}
 \end{itemize}
 
 \end{frame}
@@ -146,7 +146,7 @@ US Court of Appeals, 7th Circuit).
 \begin{itemize}
 \item Is desire for consent motivated by respect for persons or beneficence? (think Encore)
 \pause
-\item Ideas for alternatives in \href{https://www.bitbybitbook.com/en/1st-ed/ethics/dilemmas/consent/}{Bit by Bit, Sec 6.6.1}
+\item Ideas for alternatives in \href{https://www.bitbybitbook.com/en/1st-ed/ethics/dilemmas/consent/}{\texit{Bit by Bit}, Sec 6.6.1}
 \end{itemize}
 
 \end{frame}
@@ -326,6 +326,10 @@ Key idea is ``context-relative informational norms''\\
 \item attributes (types of information)
 \item transmission principles (constraints under which information flows)
 \end{itemize}
+
+\vfill
+\pause
+\onslide<2>{For fuller elaboration, see \href{https://www.bitbybitbook.com/en/1st-ed/ethics/dilemmas/uncertainty/}{\textit{Bit by Bit}, Sec 6.6.3}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
