remove abstract of paper

--- a/2020/materials/day1-intro-ethics/ethics_additions_extensions.tex
+++ b/2020/materials/day1-intro-ethics/ethics_additions_extensions.tex
@@ -106,19 +106,19 @@ Terms-of-service agreements
 \url{http://dx.doi.org/10.1145/2872427.2883016}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-Abstract:\\
-``Maps have long played a crucial role in enabling people to conceptualize and navigate the world around them. However, maps also encode the world-views of their creators. Disputed international borders are one example of this: governments may mandate that cartographers produce maps that conform to their view of a territorial dispute. Today, online maps maintained by private corporations have become the norm. However, these new maps are still subject to old debates. Companies like Google and Bing resolve these disputes by localizing their maps to meet government requirements and user preferences, i.e., users in different locations are shown maps with different international boundaries. We argue that this non-transparent personalization of maps may exacerbate nationalistic disputes by promoting divergent views of geopolitical realities.''
-
-\end{frame}
+%\begin{frame}
+%
+%Abstract:\\
+%``Maps have long played a crucial role in enabling people to conceptualize and navigate the world around them. However, maps also encode the world-views of their creators. Disputed international borders are one example of this: governments may mandate that cartographers produce maps that conform to their view of a territorial dispute. Today, online maps maintained by private corporations have become the norm. However, these new maps are still subject to old debates. Companies like Google and Bing resolve these disputes by localizing their maps to meet government requirements and user preferences, i.e., users in different locations are shown maps with different international boundaries. We argue that this non-transparent personalization of maps may exacerbate nationalistic disputes by promoting divergent views of geopolitical realities.''
+%
+%\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-Abstract, part 2:\\
-``To address this problem, we present MapWatch, our system for detecting and cataloging personalization of international borders in online maps. Our system continuously crawls all map tiles from Google and Bing maps, and leverages crowdworkers to identify border personalization. In this paper, we present the architecture of MapWatch, and analyze the instances of border personalization on Google and Bing, including one border change that MapWatch identified live, as Google was rolling out the update.''
-
-\end{frame}
+%\begin{frame}
+%
+%Abstract, part 2:\\
+%``To address this problem, we present MapWatch, our system for detecting and cataloging personalization of international borders in online maps. Our system continuously crawls all map tiles from Google and Bing maps, and leverages crowdworkers to identify border personalization. In this paper, we present the architecture of MapWatch, and analyze the instances of border personalization on Google and Bing, including one border change that MapWatch identified live, as Google was rolling out the update.''
+%
+%\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
@@ -160,7 +160,7 @@ Deen Freelon at SICSS 2018: ``\textcolor{blue}{\href{https://www.youtube.com/wat
 
 If you go ``off the grid'': \pause
 \begin{itemize}
-\item you might lose access during your research
+\item you might lose access to your data during your research
 \pause
 \item you might struggle to have your research funded, talk about it, and publish it
 \pause
