strip out context

--- a/2020/materials/day1-intro-ethics/02-intro-computational-social-science.tex
+++ b/2020/materials/day1-intro-ethics/02-intro-computational-social-science.tex
@@ -10,12 +10,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[]{Introduction to computational social science}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
-\date[]{Summer Institutes in Computational Social Science\\Day 1\\2020
-\vfill
-\begin{flushleft}
-{\scriptsize
-The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation, Alfred P. Sloan Foundation, Facebook, and the Social Science Research Council.}
-\end{flushleft}
+\date[]{%Summer Institutes in Computational Social Science\\Day 1\\2020
+%\vfill
+%\begin{flushleft}
+%{\scriptsize
+%The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation, Alfred P. Sloan Foundation, Facebook, and the Social Science Research Council.}
+%\end{flushleft}
 \begin{flushright}
 \includegraphics[width=0.1\textwidth]{figures/cc-by.png}
 \end{flushright}
