--- a/2020/materials/day1-intro-ethics/02-intro-computational-social-science.tex
+++ b/2020/materials/day1-intro-ethics/02-intro-computational-social-science.tex
@@ -90,7 +90,7 @@
 \only<2-3>{\includegraphics[width=\textwidth]{figures/blumenstock_predicting_2015_fig3ab}}
 \end{center}
 \vspace{-0.2in}
-\hspace{0.2in}Blumenstock et al.\ \hspace{0.9in} \onslide<2-3>Demographic and Health Survey\\ 
+\hspace{0.2in}Blumenstock et al.\ \hspace{0.7in} \onslide<2-3>Demographic \& Health Survey\\ 
 
 \pause \pause 
 \vfill
@@ -133,30 +133,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-\begin{itemize}
-\item \emph{computational} and \emph{social science}
-\item often involves ethical/privacy questions that are now considered complex
-\item combines readymades and custommades
-\pause
-\item involves five key communities: social science, data science, business people, privacy advocates, policy makers
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-Balance between social science, data science, business people, privacy advocates, and policy makers\\
-\end{center}
-\vf
-\begin{center}
-Health Ecosystem vs Horrific Monoculture
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
 \begin{center}
 \LARGE{What is computational social science?}
 \end{center}
@@ -165,11 +141,10 @@ Health Ecosystem vs Horrific Monoculture
 \item \emph{computational} and \emph{social science}
 \item often involves ethical/privacy questions that are now considered complex
 \item combines readymades and custommades
-\item involves five key communities: social science, data science, business people, privacy advocates, policy makers
 \end{itemize}
 
 \end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
 \begin{center}
@@ -185,7 +160,7 @@ No
 \begin{frame}
 
 \begin{center}
-\includegraphics[height=0.9\textheight]{figures/digital_age_clean.png}
+\includegraphics[width=0.8\textwidth]{figures/bitbybit1-1a_hilbert_worlds_2011_fig2}
 \end{center}
 
 \vf
@@ -207,7 +182,7 @@ No
 \begin{frame}
 
 \begin{center}
-\LARGE{How do we create computational social science, individually and as a community?}
+\LARGE{How do we create a computational social science community?}
 \end{center}
 
 \end{frame}
@@ -324,7 +299,7 @@ Another important difference between social science and data science:
 \begin{frame}
 
 \begin{center}
-\LARGE{Let's get started . . . . }
+\LARGE{Thanks}
 \end{center}
 
 
