mass colalboration slides

--- a/2020/materials/day5-mass-collaboration/01-mass-collaboration.tex
+++ b/2020/materials/day5-mass-collaboration/01-mass-collaboration.tex
@@ -14,12 +14,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[]{Introduction to mass collaboration}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
-\date[]{Summer Institutes in Computational Social Science\\2020
-\vfill
-\begin{flushleft}
-{\scriptsize
-The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation and the Alfred P. Sloan Foundation.}
-\end{flushleft}
+\date[]{%Summer Institutes in Computational Social Science\\2020
+%\vfill
+%\begin{flushleft}
+%{\scriptsize
+%The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation and the Alfred P. Sloan Foundation.}
+%\end{flushleft}
 \begin{flushright}
 \includegraphics[width=0.1\textwidth]{figures/cc-by.png}
 \end{flushright}
@@ -30,21 +30,26 @@ The Summer Institutes in Computational Social Science is supported by grants fro
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-Schedule: \url{https://compsocialscience.github.io/summer-institute/2019/\#schedule}
+\begin{columns}
+\begin{column}{.40\textwidth}
+\includegraphics[width=\textwidth]{figures/salganik_bit_2018_cover}
+\end{column}%
+
+\hfill%
+
+\begin{column}{.60\textwidth}
+1) Introduction \\
+2) Observing behavior \\
+3) Asking questions \\
+4) Running experiments \\
+\textcolor{blue}{5) Mass collaboration} \\
+6) Ethics \\
+7) The future \\
+\end{column}%
+\end{columns}
 
 \end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{itemize}
-\item Observing behavior
-\item Asking questions
-\item Running experiments
-\item \textcolor{blue}{Creating mass collaboration}
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
 \begin{center}
@@ -82,9 +87,8 @@ Collaborators not cogs (ornithology and astronomy are examples)
 \begin{frame}
 
 \begin{itemize}
-\item Is this really research?
-\pause 
-\item Does this enable new research?
+  \item\only<1>{Is this really research?} \only<2->{\sout{Is this really research?}}
+  \item<2-> Does this enable new research?
 \end{itemize}
 
 \end{frame}
@@ -92,9 +96,8 @@ Collaborators not cogs (ornithology and astronomy are examples)
 \begin{frame}
 
 \begin{itemize}
-\item Is this perfect?
-\pause
-\item Is this better than we can do without mass collaboration?
+  \item \only<1>{Is this perfect?} \only<2->{\sout{Is this perfect?}}
+  \item<2-> Is this better than we can do without mass collaboration?
 \end{itemize}
 
 \end{frame}
@@ -102,9 +105,8 @@ Collaborators not cogs (ornithology and astronomy are examples)
 \begin{frame}
 
 \begin{itemize}
-\item Is this impossible?
-\pause
-\item Is this possible?
+  \item \only<1>{Is this impossible?} \only<2>{\sout{Is this impossible?}}
+  \item<2-> Is this possible?
 \end{itemize}
 
 \end{frame}
