--- a/2020/materials/day5-mass-collaboration/03-ffchallenge_participate_activity.tex
+++ b/2020/materials/day5-mass-collaboration/03-ffchallenge_participate_activity.tex
@@ -243,7 +243,7 @@ Introducing the data
 \begin{frame}
 
 \begin{itemize}
-\item Before you have access to the data, you will sign a data use agreement
+\item Before you have access to the data, you will complete a data use agreement
 \pause
 \item After this activity you will delete the data from your computer
 \pause
@@ -671,7 +671,7 @@ What are the main ``recipes'' that people used in the Fragile Families Challenge
 \begin{frame}
 \frametitle{Getting started}
 
-Alex has created \href{https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day5-mass-collaboration/activity/submission.zip}{a template submission zip file} that includes:
+We created \href{https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/activity/submission.zip}{a template submission zip file} that includes:
 \begin{itemize}
 \item predictions.csv (one prediction per family per outcome)
 \item narrative (a text file explaining the approach)
