slides for shooting

--- a/2020/materials/day4-surveys/01-survey-research-digital-age.tex
+++ b/2020/materials/day4-surveys/01-survey-research-digital-age.tex
@@ -5,6 +5,8 @@
 \usepackage{framed}
 \usepackage{comment}
 
+\usepackage{ulem}
+
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
@@ -84,17 +86,13 @@ A few notes on my teaching:
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-\begin{center}
-\LARGE{Why should I care about surveys?}
-\end{center}
+We need surveys even in the digital age.
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-\begin{center}
-\LARGE{Why should I care about surveys\\in the age of big data?}
-\end{center}
+We need surveys \sout{even} especially in the digital age.
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
