tweaks after shooting

--- a/2020/materials/day4-surveys/01-survey-research-digital-age.tex
+++ b/2020/materials/day4-surveys/01-survey-research-digital-age.tex
@@ -171,7 +171,7 @@ Total survey error framework
 \begin{frame}
 \frametitle{Total survey error framework}
 
-Insight 1: Errors can come from bias or variance\\
+Insight 1: Errors can come from bias and variance\\
 \pause
 \begin{center}
 \includegraphics[height=0.6\textheight]{figures/bitbybit3-1_bias-variance}
@@ -254,7 +254,9 @@ Full report: \url{http://www.aapor.org/Education-Resources/Reports/An-Evaluation
 Wrapping up:
 \pause
 \begin{itemize}
-\item Total survey error framework 1st key insight: errors can be caused by bias or variance
+\item We need surveys especially in the digital age.
+\pause
+\item Total survey error framework 1st key insight: errors can be caused by bias and variance
 \pause
 \item Total survey error framework 2nd key insight: errors can be related to representation and measurement
 \pause
