tweaks before recording

--- a/2020/materials/day4-surveys/02-nonprobability-sampling.tex
+++ b/2020/materials/day4-surveys/02-nonprobability-sampling.tex
@@ -183,42 +183,42 @@ Sometimes called:
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{equation*}
-\hat{\bar{y}} = \frac{\sum_{i \in s} y_i / \hat{\pi}_i }{N}
-\end{equation*}
-
-where 
-$\hat{\pi}_i = \frac{n_g}{N_g} \quad \forall \quad i \in g$ (estimated probability of inclusion)
-
-\vfill
-
-Requires:
-\begin{itemize}
-\item auxiliary information $(N_g)$
-\item ability to place respondents in groups
-\item assumptions
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{itemize}
-\item Key to many adjustment methods is to use external information and make assumptions
-\pause
-\item If external information is incorrect or assumptions are wrong, then you can make things worse (but it usually seems to make things better)
-\end{itemize}
-
-\end{frame}
+%\begin{frame}
+%
+%\begin{equation*}
+%\hat{\bar{y}} = \frac{\sum_{i \in s} y_i / \hat{\pi}_i }{N}
+%\end{equation*}
+%
+%where 
+%$\hat{\pi}_i = \frac{n_g}{N_g} \quad \forall \quad i \in g$ (estimated probability of inclusion)
+%
+%\vfill
+%
+%Requires:
+%\begin{itemize}
+%\item auxiliary information $(N_g)$
+%\item ability to place respondents in groups
+%\item assumptions
+%\end{itemize}
+%
+%\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{frame}
+%
+%\begin{itemize}
+%\item Key to many adjustment methods is to use external information and make assumptions
+%\pause
+%\item If external information is incorrect or assumptions are wrong, then you can make things worse (but it usually seems to make things better)
+%\end{itemize}
+%
+%\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
 Imagine that you want to estimate the average height of Princeton students.\\
 \begin{itemize}
 \item Assume 50\% are male and 50\% are female
-\item You stand outside Lewis Library and recruit 60 Princeton students
+\item You stand outside Lewis Library and recruit a non-random sample of 60 Princeton students
 \item Males (n= 20): Average height: 180cm
 \item Females (n=40): Average heigh: 170cm
 \end{itemize}
@@ -234,7 +234,12 @@ Imagine that you want to estimate the average height of Princeton students.\\
 \item weighted estimate = 175cm ($180 * 0.5 + 170 * 0.5$)
 \end{itemize}
 \pause
-How could this go wrong?
+
+\begin{itemize}
+\item weighted estimate uses auxiliary information and assumptions
+\pause
+\item How could this go wrong?
+\end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
