clean up before video

--- a/2020/materials/day4-surveys/04-combining-surveys-and-big-data.tex
+++ b/2020/materials/day4-surveys/04-combining-surveys-and-big-data.tex
@@ -71,8 +71,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-Will big data kill surveys?
-
+Will big data kill surveys?\\
+\pause
+No
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
